--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "author": "Ranno Ait",
   "license": "ISC",
   "devDependencies": {
-    "bower": "^1.5.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.2",
     "gulp-uncss": "^1.0.4"
