--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.4.2",
     "gulp-uncss": "^1.0.4"
   }
